metadata/force-app/main/default/objects/CustomName_hfvsR__c/CustomName_hfvsR__c.object-meta.xml
<CustomObject>
    <description>Description_tGBjc</description>
    <label>CustomLabel_VBxWR</label>
    <nameField>
        <label>CustomLabel_VBxWR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VBxWRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>