metadata/force-app/main/default/objects/CustomName_hfvsR__c/fields/CustomField_npWNc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_npWNc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvfGjS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>