metadata/force-app/main/default/objects/CustomName_hfvsR__c/fields/CustomField_pnrIU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pnrIU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjzpSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>